# BiliAssistant

./: .gitignore  LICENSE  OssMp3AndGetTxt.py  README.md  bili_tampermonkey.js  config.example.py  environment.yml  main.py  pyproject.toml  requirements.txt
core/: asr_client.py  downloader.py  llm_client.py  oss_manager.py  pipeline.py
prompts/: presets.json
utils/: config.py  helpers.py  logger.py
