[project]
name = "bili-assistant"
version = "0.1.0"
description = "Bilibili and audio transcription plus summarization assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "imageio-ffmpeg>=0.6.0",
    "oss2>=2.19.1",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "uvicorn>=0.43.0",
    "yt-dlp>=2025.10.14",
]
